--- a/site/styles.css
+++ b/site/styles.css
@@ -20,7 +20,6 @@ html {
 
 body {
   color: #1A202C;
-
 }
 
 a {
@@ -174,30 +173,30 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 
 .hero {
   position: relative;
-  margin-top: 0px;
+  margin-top: -50px;
   padding: 100px;
-  color: EDF9FA;
-  min-height: 200px;
+  color: white;
+  min-height: 400px;
   z-index: 1; 
-  background-color: #EDF9FA !important
+  background-color: #083E44 !important;
 }
 
 .hero::before {
   content: "";
   position: absolute;
   inset: 0; 
-  background-color: #EDF9FA;
+  background: url('/assets/img/about-us-esphere.svg') no-repeat;
   background-position: center top; 
   background-size: 1000px;
   z-index: -1;
-  width: 100%;
-  background-size: contain;
 }
 
 .get-started {
-  background-color: #EDF9FA;
+  background-color: #F9F9F9;
+  background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg');
+  background-repeat: no-repeat, no-repeat;
   background-position: left 20px top 40px, right 20px bottom 40px;
-  background-size: auto; /* Or specify the size if needed */
+  background-size: 500px; /* Or specify the size if needed */
   padding-top: 50px;
   padding-right: 50px;
   padding-left: 50px;
@@ -205,11 +204,10 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .training {
-  /* margin-top: 25px; */
+  margin-top: 25px;
   padding: 50px;
   padding-bottom: 25px;
   padding-top: 25px;
-  margin-bottom: 40px;
 }
 
 .overview {
@@ -217,17 +215,6 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   padding-right: 50px;
   padding-left: 50px;
   margin-top: 15px;
-  /* margin-bottom: 40px; */
-}
-
-.tour {
-  padding-right: 50px;
-  padding-left: 50px;
-  margin-top: 15px;
-  background-image: url('assets/img/inputoutput-pink.svg');
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  height: 375px;
   margin-bottom: 40px;
 }
 
@@ -244,15 +231,24 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .nav-item {
-  padding-right: 20px;
+  padding-right: 15px;
 }
 
 .navbar-logo {
   padding-right: 20px;
 }
 
+.nav-footer {
+  padding-top: 25px;
+}
+
+.nav-footer a:hover {
+  color: #1A202C;
+  text-decoration: none;
+}
+
 .alert, .alert-primary {
-  background-color: #44969f;
+  background-color: #DE257E;
 }
 
 .quarto-announcement-content, .quarto-announcement-action:before {
@@ -272,6 +268,14 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 .smallcaps {
   font-weight: bold;
   font-size: larger;
+}
+
+.smallercaps {
+  font-weight: bold;
+  font-size: smaller;
+  font-variant: small-caps;
+  position: relative;
+  top: -5px;
 }
 
 input[type="checkbox"] {
@@ -301,6 +305,45 @@ input[type="checkbox"][checked] {
 
 .attn h2 {
   color: #083E44;
+}
+
+.attn-yellow {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  border: 2px solid #083E44;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+  background-color: rgb(250, 245, 145);
+}
+
+.attn-orange {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  border: 2px solid #083E44;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+  background-color: rgb(252, 169, 110);
+}
+
+.attn-red {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  border: 2px solid #083E44;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+  background-color: rgb(255, 109, 109);
 }
 
 .highlights {
@@ -338,7 +381,7 @@ input[type="checkbox"][checked] {
 
 .image-container {
   position: relative;
-  z-index: 1;
+  z-index: -1;
 }
 
 .image-container img {
@@ -436,7 +479,26 @@ figcaption {
   color: white;
   background-color: #083E44;
   border: 1px solid #083E44;
-  font-weight: bold;
+}
+
+.button-small {
+  /* font-size: 0.6em; */
+  font-variant: small-caps;
+  color: #083E44;
+  background-color: #B5B5B510;
+  border: 1px solid #083E44;
+  /* font-weight: bold; */
+  border-radius: 3px;
+  padding: 2px 5px;
+  vertical-align: middle;
+  line-height: 35px;
+}
+
+.button-small:hover {
+  color: #083E44;
+  text-decoration: none;
+  background-color: #EAF8FA;
+  border: 1px solid #083E44;
 }
 
 .cta {
@@ -451,8 +513,8 @@ figcaption {
   transition: color 0.15s ease-in, background-color 0.15s ease-in;
   font-weight: bold;
   text-align: center;
-  /* font-variant: small-caps; */
-  font-size: 16px;
+  font-variant: small-caps;
+  font-size: 20px;
 }
 
 .cta:hover {
@@ -461,9 +523,9 @@ figcaption {
 }
 
 #nav-menu-log-in {
-  background-color: #083E44;
-  border: 1px solid #083E44;
-  color: #fff;
+  background-color: white;
+  border: 1px solid #de257e;
+  color: #de257e;
   padding: 0.375rem 0.75rem;
   border-radius: 2px;
   text-decoration: none;
@@ -537,10 +599,6 @@ figcaption {
   color: #DE257E;
 }
 
-.accent {
-  color: #073E44;
-}
-
 .green {
   color: green;
 }
@@ -595,7 +653,7 @@ figcaption {
   color: #DE257E !important; 
 }
 
-.sidebar-item- .sidebar-item-toggle {
+.sidebar-item-container .sidebar-item-toggle {
   cursor: pointer;
   color: #083E44;
 }
@@ -606,10 +664,7 @@ hr.sidebar-divider.hi {
 
 nav#TOC {
   padding: 13px;
-  background-color: white;
   border: 1px solid #bdc1c4;
-  /* border-bottom: 2px solid #196972;
-  border-right: 2px solid #196972; */
   border-radius: 3px;
   background-color: #FAFBFB;
 }
@@ -721,234 +776,33 @@ h2, .h2 {
   display: none;
 }
 
-/* to delete pink search icon */
-button.aa-DetachedSearchButton svg {
-  display: none !important;
+button.aa-DetachedSearchButton svg path {
+  fill: #de257e !important;
 }
 
 button.aa-DetachedSearchButton:hover svg path {
-  /* fill: #AF1A62 !important; */
+  fill: #AF1A62 !important;
+}
+
+/* section#footnotes {
   display: none !important;
 }
 
-.watermark {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-30deg);
-  font-size: 5rem;
-  font-weight: bold;
-  color: rgba(200, 200, 200, 0.5); /* Adjust transparency */
-  z-index: 1000;
-  pointer-events: none; /* Prevent interaction */
-  white-space: nowrap;
-}
+#quarto-appendix.default {
+    border-top: none !important;
+} */
+ 
+/* .figure-img
+{
+  border: 1px solid #222425; 
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  border-radius: 5px;
+  padding: 20px;
+} */
 
-body::before {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  font-size: 4vw;
-  font-weight: bold;
-  color: rgba(222, 37, 126, 0.10);
-  z-index: 999;
-  pointer-events: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  line-height: 1.5;
-}
-
-/* Announcement banner (EU AI Act Compliance) */
-.quarto-announcement {
-  background-color: #44969f !important;
-  color: #fff !important;
-  border-radius: 0 !important;
-  min-height: 36px;
-  padding: 0 24px;
-  font-size: 16px;
-  font-family: 'Inter', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: none;
-}
-
-.quarto-announcement-content {
-  color: #fff !important;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.quarto-announcement-content a {
-  color: #fff !important;
-  text-decoration: underline;
-  font-weight: 600;
-}
-
-.quarto-announcement-content a:hover {
-  color: #fff !important;
-  text-decoration: underline;
-}
-
-.quarto-announcement-action {
-  display: none; /* Hide the default close button if not needed */
-}
-
-
-/* Button styles */
-.button, .button-green, .button-pink, .button-white, .cta {
-  border-radius: 4px;
-  padding: 8px 16px;
-  font-size: 16px;
-  font-weight: 500;
-  border: none;
-  cursor: pointer;
-  transition: background 0.2s, color 0.2s, border 0.2s;
-  box-shadow: none;
-}
-
-.button, .button-white {
-  background: #fff;
-  color: #196972;
-  border: 1px solid #196972;
-}
-
-.button-green {
-  background: #196972;
-  color: #fff;
-  border: 1px solid #196972;
-}
-
-.button-green:hover, .button:hover {
-  background: #083E44;
-  color: #fff;
-  border: 1px solid #083E44;
-}
-
-.button-pink {
-  background: #DE257E;
-  color: #fff;
-  border: 1px solid #DE257E;
-}
-
-.button-pink:hover {
-  background: #af1a62;
-  border: 1px solid #af1a62;
-}
-
-/* Typography */
-.smallcaps {
-  font-variant: small-caps;
-  font-weight: 600;
-  letter-spacing: 0.04em;
-}
-
-.accent {
-  color: #196972;
-}
-
-.pink {
-  color: #DE257E;
-}
-
-.center.bg-white {
-  border-bottom-left-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-  box-shadow: 0 -4px 16px rgba(6, 58, 59, 0.08); /* Only top shadow */
-}
-/*for doc homepage pink writing*/
-.normal-weight {
-  font-weight: normal;
-}
-
-/* Overview section background */
-.bg-washed-blue {
-  background: #edf9fa !important;
-}
-
-.tour-bg {
-  background-image: url("/homepage_docsite/freckles_bckgd.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 1200px auto; /* increase size horizontally, auto height */
-  padding: 2rem 1rem; /* add more top/bottom padding for better spacing */
-  border-radius: 2px;
-}
-
-/* Added for the new footer */
-.page-footer {
-  background-color: #26818B;
-  color: white;
-  padding: 0.5rem 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 0.5rem;
-  box-sizing: border-box;
-}
-
-.page-footer img {
-  display: inline-block;
-  margin-bottom: 2px;
-}
-
-.footer-title {
-  flex: 1;
-  min-width: 200px;
-  text-align: left;
-}
-
-.footer-column {
-  flex: 1 1 200px;
-  min-width: 180px;
-  text-align: left;
-}
-
-.footer-column strong {
-  /* display: block; */
-  margin-bottom: 0.2em;
-  font-size: 1em;
-}
-
-.footer-column a {
-  font-weight: 200;
-  color: white;
-  text-decoration: none;
-  display: inline-block;
-  margin-bottom: 0;
-  line-height: 1.2;
-  font-size: 0.9em;
-}
-
-.footer-column a:hover {
-  text-decoration: underline;
-}
-
-.nav-footer-center {
-  flex: 2;
-}
-
-.nav-footer-right {
-  flex: 1;
-}
-
-@media (max-width: 900px) {
-  .page-footer {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0.25rem 0.5rem;
+/* NO MARGIN FOOTNOTES ON MOBILE */
+/* @media only screen and (max-width: 767px) {
+  .column-margin {
+    display: none !important;
   }
-
-  .footer-title,
-  .footer-column {
-    width: 100%;
-  }
-}
+} */
