--- a/site/styles.css
+++ b/site/styles.css
@@ -494,6 +494,14 @@ figcaption {
   line-height: 35px;
 }
 
+.button-fill {
+  font-variant: small-caps;
+  display: flex;
+  width: 100%;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
 .button-small:hover {
   color: #083E44;
   text-decoration: none;
