Rework footer alignment

--- a/site/styles.css
+++ b/site/styles.css
@@ -807,9 +807,6 @@ body::before {
   align-items: flex-start;
   background: #4e868b;
   color: #fff;
-  padding: 0.1rem 0.5vw;
-  font-size: 0.95rem;
-  border-top: 1px solid #e0e0e0;
 }
 
 .footer-logo-info {
@@ -834,7 +831,9 @@ body::before {
 }
 
 .footer-logo-links {
+  font-size: 0.85em;
   min-width: 90px;
+  margin-left: 6px;
   margin-right: 12px;
 }
 
@@ -848,22 +847,33 @@ body::before {
   margin-bottom: 0.4em;
 }
 
-.footer-logo-divider {
-  width: 1px;
-  min-height: 60px;
-  background: rgba(255,255,255,0.3);
-  margin: 0 6px;
-  align-self: stretch;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .footer-company-info {
   font-size: 0.85em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-top: 0;
+}
+
+.cookie-preferences-link {
+  font-size: 0.875rem;
+  color: #ffffff;
+  font-weight: bold !important;
+  margin-top: 0.25em;
+}
+
+.cookie-preferences-link:hover {
+  color: #cccccc;
+}
+
+#custom-cookie-preferences {
+  display: block;
+  margin-top: 0.5em;
+  text-align: left;
+  color: #fff;
+  font-weight: 500;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .footer-heading {
@@ -893,15 +903,6 @@ body::before {
   text-decoration: underline;
 }
 
-.footer-divider {
-  width: 1px;
-  min-height: 100px;
-  background: rgba(255,255,255,0.3);
-  align-self: stretch;
-  margin: 0 0vw;
-  min-height: 80px;
-}
-
 .footer-user-guides {
   flex: 4 1 0;       /* Make center section much wider */
   min-width: 300px;
@@ -925,26 +926,6 @@ body::before {
   padding-left: 0 !important;
 }
 
-.cookie-preferences-link {
-  font-size: 0.875rem;
-  color: #ffffff;
-  font-weight: bold !important;
-}
-
-.cookie-preferences-link:hover {
-  color: #cccccc;
-}
-
-#custom-cookie-preferences {
-  display: block;
-  margin-top: 0.5em;
-  text-align: left;
-  color: #fff;
-  font-weight: 500;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
 /* Make Quarto's footer slots align at the top and reduce spacing */
 .nav-footer {
   display: flex !important;
@@ -952,12 +933,12 @@ body::before {
   justify-content: space-between !important;
   gap: 0 !important;
   width: 100%;
-  padding: 40px 0px;
+  padding: 20px 0px;
   background: #26818B;
 }
 
 /* Remove default padding/margin from slot containers */
-/* .nav-footer-left, .nav-footer-center, .nav-footer-right {
+.nav-footer-left, .nav-footer-center, .nav-footer-right {
   margin: 0.5rem !important;
   padding: 0.5rem !important;
   display: flex !important;
@@ -967,7 +948,7 @@ body::before {
   margin-right: 0.1rem;
   flex: 0 1 auto !important;
   min-width: 0 !important;
-} */
+}
 
 .footer-section {
   display: flex;
