Footer spacing improvements for guides, wording tweak for developer content to improve formatting

--- a/site/styles.css
+++ b/site/styles.css
@@ -914,7 +914,17 @@ body::before {
   gap: 1rem;
 }
 
-.footer-user-guides-columns ul {
+.footer-user-guides-column-1 {
+  min-width: 125px;
+  flex: 1;
+}
+
+.footer-user-guides-column-2 {
+  min-width: 160px;
+  flex: 1;
+}
+
+.footer-user-guides-column-3 {
   min-width: 125px;
   flex: 1;
 }
@@ -1006,6 +1016,7 @@ body::before {
     width: 100% !important;
     margin-bottom: 1.5em;
   }
+
   .footer-user-guides-columns {
     flex-direction: column;
     gap: 0.5em;
