Workflows training wip

--- a/site/training/assets/slides.scss
+++ b/site/training/assets/slides.scss
@@ -170,3 +170,11 @@ section.has-dark-background a:hover {
   border-radius: 4px; /* Optional: makes it slightly rounded */
 }
 
+.reveal .slide .smallercaps {
+  font-weight: bold;
+  font-size: smaller;
+  font-variant: small-caps;
+  position: relative;
+  top: -5px;
+}
+
