Update sidebar, all-releases topic, and move CSS

--- a/site/styles.css
+++ b/site/styles.css
@@ -784,6 +784,16 @@ button.aa-DetachedSearchButton:hover svg path {
   fill: #AF1A62 !important;
 }
 
+/* Listing page fix for code blocks */
+.listing-title code {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  padding: 0;
+  white-space: normal;
+  line-height: inherit;
+}
+
 /* section#footnotes {
   display: none !important;
 }
