--- a/site/styles.css
+++ b/site/styles.css
@@ -62,7 +62,7 @@ a.dropdown-item:before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #083E44;
+  background-color: #ffffff;
   transform: scaleX(0);
   transition: transform 0.3s ease;
 }
@@ -463,11 +463,11 @@ figcaption {
 }
 
 #nav-menu-log-in {
-  background-color: #083E44;
-  border: 1px solid #083E44;
-  color: #fff;
+  background-color: white;
+  border: 1px solid #de257e;
+  color: #de257e;
   padding: 0.375rem 0.75rem;
-  border-radius: 4px;
+  border-radius: 2px;
   text-decoration: none;
   font-weight: bolder;
 }
