chnaged the log in button and add the smallercaps

--- a/site/styles.css
+++ b/site/styles.css
@@ -270,6 +270,14 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   font-size: larger;
 }
 
+.smallercaps {
+  font-weight: bold;
+  font-size: smaller;
+  font-variant: small-caps;
+  position: relative;
+  top: -5px;
+}
+
 input[type="checkbox"] {
   width: 1em;
   height: 1rem;
@@ -440,6 +448,28 @@ figcaption {
   border: 1px solid #196972;
   font-weight: bold;
 }
+
+.button-small {
+  /* font-size: 0.6em; */
+  font-variant: small-caps;
+  color: #083E44;
+  background-color: #B5B5B510;
+  border: 1px solid #083E44;
+  /* font-weight: bold; */
+  border-radius: 3px;
+  padding: 2px 5px;
+  vertical-align: middle;
+  line-height: 35px;
+}
+
+.button-small:hover {
+  color: #083E44;
+  text-decoration: none;
+  background-color: #EAF8FA;
+  border: 1px solid #083E44;
+}
+
+
 
 .cta {
   text-decoration: none;
@@ -619,7 +649,8 @@ figcaption {
   color: #DE257E !important;
 }
 
-.sidebar-item- .sidebar-item-toggle {
+/*.sidebar-item- .sidebar-item-toggle*/
+.sidebar-item-container .sidebar-item-toggle {
   cursor: pointer;
   color: #083E44;
 }
@@ -1043,3 +1074,14 @@ body::before {
     gap: 0.5em;
   }
 }
+
+/* Listing page fix for code blocks
+.listing-title code {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  padding: 0;
+  white-space: normal;
+  line-height: inherit;
+}
+*/
