--- a/site/styles.css
+++ b/site/styles.css
@@ -479,12 +479,12 @@ figcaption {
   padding-bottom: 0.5rem;
   margin-bottom: 0.5rem;
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 2px;
   transition: color 0.15s ease-in, background-color 0.15s ease-in;
   font-weight: bold;
   text-align: center;
-  /* font-variant: small-caps; */
-  font-size: 16px;
+  font-variant: small-caps;
+  font-size: 20px;
 }
 
 .cta:hover {
