--- a/site/styles.css
+++ b/site/styles.css
@@ -493,11 +493,11 @@ figcaption {
 }
 
 #nav-menu-log-in {
-  background-color: white;
-  border: 1px solid #de257e;
-  color: #de257e;
+  background-color: #083E44;
+  border: 1px solid #083E44;
+  color: #fff;
   padding: 0.375rem 0.75rem;
-  border-radius: 2px;
+  border-radius: 4px;
   text-decoration: none;
   font-weight: bolder;
 }
