--- a/site/styles.css
+++ b/site/styles.css
@@ -864,8 +864,8 @@ body::before {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  flex: 0 1 200px; /* Increase width as needed */
-  min-width: 260px;
+  flex: 0 1 200px;
+  min-width: 200px;
   max-width: 400px;
 }
 
@@ -874,27 +874,34 @@ body::before {
   margin-bottom: 0.15em;
 }
 
-.footer-logo-columns {
+.footer-logo-column {
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-top: 0.5em;
+  margin-top: 0.25em;
 }
 
 .footer-company-info {
-  font-size: 1.1em;
+  font-size: 1em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 0;
+  margin-left: 0.25em;
+}
+
+.footer-company-legal {
+  font-size: 1em !important;
+}
+
+.footer a.external::after {
+  content: none !important;
+  background-image: none !important;
+  margin-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .cookie-preferences-link {
-  font-size: 1.1em;
-}
-
-.cookie-preferences-link:hover {
-  color: #cccccc;
+  font-size: 1em !important;
 }
 
 #custom-cookie-preferences {
