--- a/site/styles.css
+++ b/site/styles.css
@@ -1085,6 +1085,7 @@ body::before {
       gap: 0.5em;
     }
   }
+}
 
 /* Listing page fix for code blocks
 .listing-title code {
@@ -1094,5 +1095,4 @@ body::before {
   padding: 0;
   white-space: normal;
   line-height: inherit;
-}
-*/
+} */
